[package]
name = "ecs-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.9", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
once_cell = "1"
