[package]
name = "ecs-logger"
version = "1.0.0"
edition = "2021"
description = "A logger compatible with Elastic Common Schema (ECS) Logging"
repository = "https://github.com/ciffelia/ecs-logger"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "elasticsearch", "log", "logging", "logger"]
categories = ["development-tools::debugging"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
thiserror = "1.0"
log = { version = "0.4", default-features = false, features = ["std"] }
env_logger = { version = "0.10", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
once_cell = "1"
